--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -16,7 +16,7 @@ Follow the below steps to get started with RedisJSON and Node.js:
 
 ### Step 1. Run RedisMod Docker container
 
-This simple container image bundles together the latest stable releases of Redis and select Redis modules from Redis Lab
+This simple container image bundles together the latest stable releases of Redis and select Redis modules from Redis Lab. 
 
 
 ```bash
