Added RedisJSON & Go

--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -91,13 +91,22 @@ The following links provides you with the available options to get started with 
 
  <div class="col">
     <RedisCard
+        title="RedisJSON and Go"
+        description="How to import JSON document into Redis using Go"
+        page="/howtos/redisjson/using-go"
+        />
+ </div>
+</div>
+
+<div class="row">
+
+ <div class="col">
+    <RedisCard
         title="Visualize your JSON data using RedisInsight"
         description="How to visualize and edit your JSON data using RedisInsight"
         page="/howtos/redisjson/using-redisinsight"
         />
  </div>
-</div>
-<div class="row">
 
    <div class="col">
     <RedisCard
