Added RedisJSON Tutorial

--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -99,7 +99,7 @@ Copy the below content and save the file as “app.js”
 
 ### References
 
-- [How to store and retrieve JSON document](/howtos/redisjson/storing-json-document)
+- [RedisJSON and Python](/howtos/redisjson/using-python)
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs) 
 - Learn more about [RedisJSON](https://oss.redislabs.com/redisjson/) in the Quickstart tutorial.
