--- a/docs/howtos/redisjson/using-python/index-usingpython.mdx
+++ b/docs/howtos/redisjson/using-python/index-usingpython.mdx
@@ -1,8 +1,8 @@
 ---
-id: index-storing-json-document
+id: index-usingpython
 title: RedisJSON and Python 
 sidebar_label: RedisJSON and Python
-slug: /howtos/redisjson/storing-json-document
+slug: /howtos/redisjson/using-python
 ---
 
 
