--- a/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
@@ -239,7 +239,7 @@ A JSON object can also have another object. Here is a simple example of a JSON o
 
 ### Next Step
 
-- [How to store and retrieve JSON document](/howtos/redisjson/storing-json-document)
+- [RedisJSON and Python](/howtos/redisjson/using-python)
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs) 
 - Learn more about [RedisJSON](https://oss.redislabs.com/redisjson/) in the Quickstart tutorial.
