--- a/docs/howtos/redisjson/using-go/index-usinggo.mdx
+++ b/docs/howtos/redisjson/using-go/index-usinggo.mdx
@@ -128,7 +128,7 @@ Follow the below steps to get started with RedisJSON using Go client.
 ### References
 
 - [Go and Redis](/develop/golang/)
-- [How to store and retrieve JSON document](/howtos/redisjson/storing-json-document)
+- [RedisJSON and Python](/howtos/redisjson/using-python)
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs) 
 - Learn more about [RedisJSON](https://oss.redislabs.com/redisjson/) in the Quickstart tutorial.
