--- a/docs/howtos/redisjson/storing-json-using-nodejs/index-storingjson-nodejs.mdx
+++ b/docs/howtos/redisjson/storing-json-using-nodejs/index-storingjson-nodejs.mdx
@@ -6,10 +6,8 @@ slug: /howtos/redisjson/storing-json-using-nodejs
 ---
 
 
-RedisJSON adds a new JSON data type to Redis, and a query syntax for selecting and updating individual elements in a JSON document atomically on the Redis server. This makes our application code simpler, more efficient, and much more reliable.
 
-
-To demonstrate RedisJSON with NodeJS, let us consider a sample social network application.Imagine that you're building a sort of social network application where users can "check in" at different locations and give them a star rating… from 0 for an awful experience through 5 to report that they had the best time ever there! When designing your application, you determined that there's a need to manage data about three main entities:
+Imagine that you're building a social network application where users can "check in" at different locations and give them a star rating, say from 0 for an awful experience through 5 to report that they had the best time ever there! When designing your application, you determined that there's a need to manage data about three main entities:
 
 
 
