--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -5,7 +5,7 @@ sidebar_label: Redis Live
 slug: /community/redis-live/
 ---
 
-Redis Live hosts a variety of live-streamed content. [Sign up](https://meetups.redislabs.com/redis-live/) to get notified of new shows, and watch live on [YouTube](https://www.youtube.com/redislabs) or [Twitch](https://www.twitch.tv/redislabs). Do I need to tell you to like and subscribe?
+Redis Live hosts a variety of live-streamed content. [Sign up](https://meetups.redis.com/redis-live/) to get notified of new shows, and watch live on [YouTube](https://www.youtube.com/redisinc) or [Twitch](https://www.twitch.tv/redis). Do I need to tell you to like and subscribe?
 
 ### Redis Monthly Live
 
