Added Java tutorial for RedisJSON

--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -59,6 +59,18 @@ The following links provides you with the available options to get started with 
         />
  </div>
 
+
+ <div class="col">
+    <RedisCard
+        title="RedisJSON and Java"
+        description="How to import JSON document into Redis using Java"
+        page="/howtos/redisjson/using-java"
+        />
+ </div>
+</div>
+
+<div class="row">
+
  <div class="col">
     <RedisCard
         title="Visualize your JSON data using RedisInsight"
@@ -66,9 +78,7 @@ The following links provides you with the available options to get started with 
         page="/howtos/redisjson/using-redisinsight"
         />
  </div>
-</div>
 
-<div class="row">
  
  <div class="col">
     <RedisCard
@@ -85,6 +95,10 @@ The following links provides you with the available options to get started with 
         page="/howtos/redisjson/jsonind-document"
         />
   </div>
+</div>
+
+<div class="row">
+
 
  <div class="col">
     <RedisCard
@@ -93,9 +107,8 @@ The following links provides you with the available options to get started with 
         page="/howtos/redisjson/redisjson-cheatsheet"
         />
  </div>
-</div>
 
-<div class="row">
+
 
  <div class="col">
     <RedisCard
