--- a/docs/howtos/antipatterns/index-antipatterns.mdx
+++ b/docs/howtos/antipatterns/index-antipatterns.mdx
@@ -2,7 +2,7 @@
 id: index-antipatterns
 title: 14 Anti-Patterns Every Redis Developer Should be Aware of
 sidebar_label: 14 Anti-Patterns Every Redis Developer Should be Aware of
-slug: /howtos/redisjson/using-java
+slug: /howtos/antipatterns/
 ---
 
 ![antipattern](antipattern.png)
