--- a/docs/howtos/antipatterns/index-antipatterns.mdx
+++ b/docs/howtos/antipatterns/index-antipatterns.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-antipatterns
-title: 14 Anti-Patterns Every Redis Developer Should be Aware of
-sidebar_label: 14 Anti-Patterns Every Redis Developer Should be Aware of
+title: 14 Redis Anti-Patterns Every Developer Should Avoid
+sidebar_label: 14 Redis Anti-Patterns Every Developer Should Avoid
 slug: /howtos/antipatterns/
 ---
 
