--- a/docs/howtos/antipatterns/index-antipatterns.mdx
+++ b/docs/howtos/antipatterns/index-antipatterns.mdx
@@ -18,12 +18,33 @@ With large databases running on a single shard/Redis instance, there are chances
 
 Redis Enterprise recommends to shard if you have more than 25 GB of data and a high number of operations. Another aspect is if you have above 25,000 operations per second, then sharding can improve performance. With less number of operations/second, it can handle up to 50GB of data too.
 
-### 2. One Request per connection
+### 2. One connection per request
 
-Many databases use the concept of REST as a primary interface—send a plain old HTTP request to an endpoint with arguments encoded as POST. The database grabs the information and returns it as a response with a status code and closes the connection. Redis should be used differently—the connection should be persistent and you should make requests as needed to a long-lived connection. However, well-meaning developers sometimes create a connection, run a command, and close the connection. While opening and closing connections per command will technically work, it’s far from optimal and needlessly cuts into the performance of Redis as a whole.  
+Opening a connection each operation requires a lot of overhead to build up and tear down the TCP connection. As a developer, you might sometimes create a connection, run a command, and close the connection. While opening and closing connections per command will technically work, it’s far from optimal and needlessly cuts into the performance of Redis as a whole. Hence, it is recommended to use a connection pool (Jedis) or a Redis client that has a reactive design (Lettuce).
+ 
 
-Using the OSS Cluster API, the connection to the nodes are maintained by the client as needed, so you’ll have multiple connections open to different nodes at any given time. With Redis Enterprise, the connection is actually to a proxy, which takes care of the complexity of connections at the cluster level.
-Opening a connection each operation requires a lot of overhead to build up and tear down the TCP connection. Hence, it is recommended to use a connection pool (Jedis) or a Redis client that has a reactive design (Lettuce).
+Using the OSS Cluster API, the connection to the nodes are maintained by the client as needed, so you’ll have multiple connections open to different nodes at any given time. 
+
+:::important
+With Redis Enterprise, the connection is actually to a proxy, which takes care of the complexity of connections at the cluster level.
+:::
+
+Examples #1 - redis-py
+
+Let us look at the redis-py that uses a connection pool to manage connections to a Redis server. By default, each Redis instance you create will in turn create its own connection pool. You can override this behavior and use an existing connection pool by passing an already created connection pool instance to the connection_pool argument of the Redis class. You may choose to do this in order to implement client side sharding or have fine-grain control of how connections are managed.
+
+```python
+ >>> pool = redis.ConnectionPool(host='localhost', port=6379, db=0)
+ >>> r = redis.Redis(connection_pool=pool)
+```
+
+[Learn more about redis-py](/develop/python/)
+
+Example #2 - Lettuce
+
+Lettuce provides generic connection pool support.Lettuce connections are designed to be thread-safe so one connection can be shared amongst multiple threads and Lettuce connections auto-reconnection by default. While connection pooling is not necessary in most cases it can be helpful in certain use cases. Lettuce provides generic connection pooling support.
+
+[Learn more about Lettuce](/develop/java/?s=lettuce)
 
 ### 3. Connecting directly to Redis instances
 
