--- a/docs/howtos/antipatterns/index-antipatterns.mdx
+++ b/docs/howtos/antipatterns/index-antipatterns.mdx
@@ -7,7 +7,7 @@ slug: /howtos/antipatterns/
 
 ![antipattern](antipattern.png)
 
-"Antipattern" basically refers to those practices and solutions that might seem to be a good fit initially but when it comes to implementation phase, it makes your code much more complex. Redis defaults are not the best for everyone. It is important to spend time and figure out what works best for you. Redis is a favorite data store of millions of developers due to its speed and performance, however it is important to make sure that it is being used properly, otherwise, problems can and will occur.
+"Antipatterns" basically refers to those practices and solutions that might seem to be a good fit initially but when it comes to implementation phase, it makes your code much more complex. Redis defaults are not the best for everyone. It is important to spend time and figure out what works best for you. Redis is a favorite data store of millions of developers due to its speed and performance, however it is important to make sure that it is being used properly, otherwise, problems can and will occur.
 
 Let us look at the top 14 Redis anti-patterns to avoid:
 
