--- a/docs/create/azure/portal/index-azure-portal.mdx
+++ b/docs/create/azure/portal/index-azure-portal.mdx
@@ -42,8 +42,9 @@ redislabs.redis.cache.windows.net:6379>
 
 ### Resources
 
+
 <div class="text--center">
-<iframe width="760" height="415" src="https://www.youtube.com/embed/eThj-jwViZw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="760" height="415" src="https://www.youtube.com/embed/t6XQHsKFMKQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 ### Next Step
