--- a/docs/create/azure/portal/index-azure-portal.mdx
+++ b/docs/create/azure/portal/index-azure-portal.mdx
@@ -12,15 +12,15 @@ Azure Cache for Redis is a native fully-managed service on Microsoft Azure. Azur
 ### Step 1. Getting Started 
 
 
-Launch  [Azure Cache for Redis Enterprise & Flash](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/garantiadata.redis_enterprise_1sp_public_preview?ocid=redisga_redislabs_cloudpartner_cta1) 
+Launch  [Azure Cache for Redis Enterprise](https://portal.azure.com)
 
 
-![RedisLabs Azure Page](azure1.png) 
+![RedisLabs Azure Page](azure7.png) 
 
 
 ### Step 2: Setup & Subscribe
 
-![RedisLabs Azure Page](azure2.png)
+![RedisLabs Azure Page](azure6.png)
 
 
 ### Step 3: Configuring New Redis Cache
@@ -33,8 +33,8 @@ Launch  [Azure Cache for Redis Enterprise & Flash](https://azuremarketplace.micr
 ### Step 4: Connecting to Redis database
 
 ```
-sudo redis-cli -h redislabs.redis.cache.windows.net -p 6379
-redislabs.redis.cache.windows.net:6379>
+sudo redis-cli -h demos.redis.cache.windows.net -p 6379
+demos.redis.cache.windows.net:6379>
 ```
 
 ### Resources
