--- a/docs/howtos/antipatterns/index-antipatterns.mdx
+++ b/docs/howtos/antipatterns/index-antipatterns.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-antipatterns
-title: 14 Redis Anti-Patterns Every Developer Should Avoid
-sidebar_label: 14 Redis Anti-Patterns Every Developer Should Avoid
+title: 12 Redis Anti-Patterns Every Developer Should Avoid
+sidebar_label: 12 Redis Anti-Patterns Every Developer Should Avoid
 slug: /howtos/antipatterns/
 ---
 
@@ -70,7 +70,7 @@ Lettuce provides generic connection pool support.Lettuce connections are designe
 
 [Learn more about Lettuce](/develop/java/?s=lettuce)
 
-### 3. Connecting directly to Redis instances
+### 3. Connecting  directly to Redis instances
 
 With a large number of clients, a reconnect flood will be able to simply overwhelm a single threaded Redis process and force a failover. Hence, it is recommended that you should run either twemproxy (OSS) or the [Redis enterprise DMC proxy](https://docs.redis.com/latest/rs/administering/designing-production/networking/multiple-active-proxy/). It can help you reduce the number of connections to your cache server by acting as a proxy.
 
@@ -96,7 +96,7 @@ Pipeling is completely a client side implementation. It is aimed at solving resp
 Read further here.
 
 
-### 6. Caching keys without TTL (a bonus)
+### 6. Caching keys without TTL
 
 Redis functions primarily as a key-value store.  It is possible to set timeout values on these keys. Said that, a timeout expiration automatically deletes the key. Additionally, when we use commands that delete or overwrite the contents of the key, it will clear the timeout. Redis TTL command is used to get the remaining time of the key expiry in seconds. TTL returns the remaining time to live of a key that has a timeout. This introspection capability allows a Redis client to check how many seconds a given key will continue to be part of the dataset.Keys will accumulate and end up being evicted. Hence, it is recommended to set TTLs on all caching keys. Further information here.
 
@@ -123,12 +123,12 @@ In Redis, the KEYS command can be used to perform exhaustive pattern matching on
 
 ### 10. Running Ephemeral Redis as a primary database
 
-Redis is often used as a primary storage engine for applications. Unlike using Redis as a cache, using Redis as a primary database requires two extra features to be effective. Any primary database should really be highly available. If a cache goes down, then generally your application is in a brown-out state. If a primary database goes down, your application also goes down. Similarly, if a cache goes down and you restart it empty, that’s no big deal. For a primary database, though, that’s a huge deal. Redis can handle these situations easily, but they generally require a different configuration than running as a cache. 
-Redis as a primary database is great, but you’ve got to support it by turning on the right features.
+Redis is often used as a primary storage engine for applications. Unlike using Redis as a cache, using Redis as a primary database requires two extra features to be effective. Any primary database should really be highly available. If a cache goes down, then generally your application is in a brown-out state. If a primary database goes down, your application also goes down. Similarly, if a cache goes down and you restart it empty, that’s no big deal. For a primary database, though, that’s a huge deal. Redis can handle these situations easily, but they generally require a different configuration than running as a cache. Redis as a primary database is great, but you’ve got to support it by turning on the right features.
 
+:::important
 With Redis open source, you need to set up Redis Sentinel for high availability. In Redis Enterprise, it’s a core feature that you just need to turn on when creating the database. As for durability, both Redis Enterprise and open source Redis provide durability through AOF or snapshotting so your instance(s) start back up the way you left them.
- 
- 
+:::
+
 ### 11. Scanning keyspace by keyname
 
 This is an extremely slow operation and will run  O(N) with N being the number of keys. It is recommended to use RediSearch to return information based on the contents of the data instead of iterating through the key space.
@@ -143,7 +143,7 @@ This is an extremely slow operation and will run  O(N) with N being the number o
 
 Microservices written in several languages may not marshal/unmarshal JSON in a consistent manner. Application logic will be required to lock/watch a key for atomic updates. JSON manipulation is often a very compute costly operation. Hence, it is recommended to use HASH data structure and also, RedisJSON module.
 
-### 13. Translating a table or JSON to a HASH without considering query pattern
+### (Bonus) - Translating a table or JSON to a HASH without considering query pattern
 
 The only query mechanism is a SCAN which requires reading the data structure and limits filtering to the MATCH directive. It is recommended to store the table or JSON as a string. Break out the indexes into reverse indexes using a SET or SORTED SET and point back to the key for the string.
 Using SELECT command and multiple databases inside one Redis instance
@@ -151,7 +151,6 @@ Using SELECT command and multiple databases inside one Redis instance
 The usage of SELECT and multiple databases inside one Redis instance was mentioned as an anti-pattern by Salvatore (the creator of Redis). It is recommended to use a dedicated Redis instance for each database need. This is especially true in microservice architectures where client applications might step on each other's toes (noisy neighbor, database setup/teardown impact, maintenance, upgrade, ...)
 
 
-### 14. Going full time series database when all you needed was to know the ordering
 
 The RedisTimeSeries module provides a direct compete to time series databases. But if the only query is based on ordering, it's unnecessary complexity. Hence, it is recommended to use a SORTED SET with a score of 0 for every value. The values are appended. Or use a timestamp for the score for simple time based queries
 
