--- a/docs/howtos/antipatterns/index-antipatterns.mdx
+++ b/docs/howtos/antipatterns/index-antipatterns.mdx
@@ -158,3 +158,4 @@ The RedisTimeSeries module provides a direct compete to time series databases. B
 ### References
 
 - [7 Redis Worst Practices](https://redis.com/blog/7-redis-worst-practices/)
+- [Redis Anti-Patterns Video](https://www.youtube.com/watch?v=V532pU-7zW8)
